@@ -1,3 +1,7 @@
+June 9th, 2007: Alex Burger <alex_b@users.sourceforge.net>
+- Change REGEX to use Text::Balanced instead of split to fix bug with
+  REGEX statements that contain captures.
+
 Apr 6th, 2007: Alex Burger <alex_b@users.sourceforge.net>
 - Release snmptt_1.2beta3
 
